# material-parsers

./: .bumpversion.toml  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.macos.txt  requirements.txt
MaterialNER/: materialNER.py  results.md  service.py
clustering/: clustering.py  config.json
commons/: grobid_client_generic.py  grobid_evaluation_analysis.py  grobid_tokenizer.py  grobid_training_consistency_check.py  setup.py  supermat_tei_parser.py
delft/: preload_embeddings.py  resources-registry.json
evaluation/: evaluation.py
grobid_superconductors/: __main__.py  service.py
grobid_superconductors_python/: Dockerfile  __init__.py  requirements.txt  service.py  setup.py
linking/: Dockerfile  config.json  data_model.py  json_entity_ruler_reader.py  linking_evaluation.py  linking_module.py  relationships_resolver.py  requirements.txt  semantic-linking.py  service.py  setup.py
materialParser/: embedding-registry.json  matParser.py  matParser1.py  matParser2.py  material-to-class.ipynb  material2class.py  materialParserWrapper.py  materialParser_evaluation.py  material_data_commons.py  setup.py
material_parsers/: __main__.py  service.py  setup.py
paper_selection/: prepare_interface.py
process/: config.json  supercon_batch.py  supercon_batch_csv.py  supercon_batch_old.py
resources/: config.json
src/: client.py  config.json  controller.py  grobid_client_generic.py  interface.py  nohup.out
supercon/: Dockerfile  README.md  config.json  controller.py  proxy  requirements.txt
supercuration/: README.md  __init__.py  config.json  controller.py
tests/: conftest.py  grobid-evaluation-analysis_test.py  test_linking_evaluation.py  test_utils.py  (+6 more)
(+1319 files in other folders)
